# pdfchat

./: .gitignore  README.md
backend/: .env.example  config.py  main.py  pyproject.toml  rag_engine.py
backend/tests/: conftest.py  test_functional.py  test_rag.py  test_system.py
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  setupTests.ts
frontend/src/hooks/: useChatStream.ts
